--- a/SendEmailToUserForBirthday/SendEmailToUserForBirthday/SendEmailToUserForBirthday.csproj
+++ b/SendEmailToUserForBirthday/SendEmailToUserForBirthday/SendEmailToUserForBirthday.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="EmailTemplates\EmailTemplate.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="EmailTemplates\EmailTemplate.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.138" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
